--- a/pop.html
+++ b/pop.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>Simple Mouse Gesture</title>
     <link rel="stylesheet" href="./css/pop.css">
-    <!-- Jquery 3.2.1 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/jquery.js"></script>
   </head>
   <body>
     <h1>UNKO</h1>
+    <button>localstrage</button>
+    <div id="btn">hoge</div>
+    <script src="js/popup.js"></script>
   </body>
 </html>
