いろいろ変えた

--- a/popup.html
+++ b/popup.html
@@ -4,22 +4,25 @@
     <meta charset="utf-8">
     <title>Simple Mouse Gesture</title>
     <link rel="stylesheet" href="./css/pop.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-  </head>
-  <body>
-    <h1>setting</h1>
-    <label for="size">Choose Circle Size:</label>
-      <select id="size">
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-      </select>
-    <ul></ul>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popup.js"></script>
+  </head>
+  <body>
+    <h1 style="text-align: center">SETTINGS&#129303;</h1>
+    <div class="flex">
+      <div><label for="size">Gesture Count:</label></div>
+      <div style="margin-left: 20px">
+        <select id="size">
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+        </select>
+      </div>
+    </div>
+    <div id="setting"></div>
   </body>
 </html>
