--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Simple Mouse Gesture</title>
-    <link rel="stylesheet" href="./css/pop.css">
+    <link rel="stylesheet" href="./css/popup.css">
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popup.js"></script>
   </head>
